--- a/dylan-tung.html
+++ b/dylan-tung.html
@@ -1,198 +1,87 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Dylan Tung — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
+  .prospect-page {max-width:960px;margin:0 auto 3rem;padding:1.5rem;color:#1a1a1a;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin-bottom:.25rem;text-transform:uppercase;}
+  .prospect-tagline {font-size:1rem;font-weight:600;margin-bottom:.15rem;}
+  .prospect-subtitle {font-size:.9rem;opacity:.9;margin:0;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  .prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;
+    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label {font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
+  .grade-tier {font-size:.9rem;font-weight:600;}
 
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
+  /* Recommendation Pill */
+  .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box {width:12px;height:12px;border-radius:3px;}
+  .pill-red {background:#ef4444;} /* Watchlist */
 
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
+  /* META */
+  .prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column {flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title {font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list {list-style:none;margin:0;padding:0;}
+  .meta-list li {display:flex;justify-content:space-between;padding:.28rem 0;
+    border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value {text-align:right;margin-left:1rem;}
 
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
+  /* CONTENT SECTIONS */
+  .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;
+    border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body {font-size:.9rem;line-height:1.52;}
+  .section-list li {font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- HERO -->
+  <!-- ================= HERO ================= -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">DYLAN TUNG</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️ Prospect · Chip-on-Your-Shoulder Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Cornell University · Polo 🐎 · Class of 2028</p>
+    <div>
+      <h1 class="prospect-name">Dylan Tung</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">Cornell University · Polo · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">88</div>
-      <div class="grade-tier">Round 3–4 Candidate</div>
-      <div class="grade-note">Non-traditional path with real upside and edge</div>
+      <div class="grade-score">85</div>
+      <div class="grade-tier">Round 3–4</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <span>Watchlist Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- META -->
+
+  <!-- ================= META ================= -->
   <section class="prospect-meta">
 
-    <!-- Prospect Info -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span>College</span><span class="meta-value">Cornell University</span></li>
-        <li><span>Major</span><span class="meta-value">Viticulture &amp; Enology</span></li>
-        <li><span>Minor</span><span class="meta-value">Information Science</span></li>
+        <li><span>School</span><span class="meta-value">Cornell University</span></li>
+        <li><span>Major</span><span class="meta-value">Viticulture & Enology, Information Science</span></li>
+        <li><span>Minor</span><span class="meta-value">N/A</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.8</span></li>
         <li><span>Sport</span><span class="meta-value">Polo</span></li>
@@ -200,80 +89,64 @@
       </ul>
     </div>
 
-    <!-- MAP Profile -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">900</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">23 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">27 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">23 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">
-            2. Chip on Your Shoulder<br>
-            (Resilient Personality · Relentless Goal Setter · High Work Ethic)
-          </span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">
-            Pass the Baton<br>
-            (Democratic Leader · Team Input · Shared Decision Making)
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">23 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">70.6%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">98.6%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">86.9%</span></li>
+        <li><span>Personality</span><span class="meta-value">Chip on Your Shoulder (Resilient, Relentless)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Democratic Leader (Collaborative, Shared Decision-Making)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Logical (Analytical, Evidence-Based)</span></li>
       </ul>
     </div>
 
   </section>
 
-  <!-- OVERVIEW -->
+
+
+  <!-- ================= CONTENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Dylan brings one of the most unique profiles in the Diamond League class — a non-traditional major in Viticulture &amp;
-      Enology, a 3.8 GPA, and a national-level polo résumé layered on top of entrepreneurial and investing experience.
-      His Chip on Your Shoulder wiring shows up clearly: he has consistently played up against better-resourced opponents
-      and entered recruiting later and from a non-traditional path, using those headwinds as motivation to close the gap.
+      Dylan brings one of the most unique profiles in the Diamond League class — a non-traditional major in Viticulture & Enology, a 3.8 GPA, and a national-level polo résumé layered on top of entrepreneurial and investing experience. His Chip on Your Shoulder wiring shows up clearly: he has consistently played up against better-resourced opponents and entered recruiting later and from a non-traditional path, using those headwinds as motivation to close the gap.
       <br><br>
-      His work across investing, entrepreneurship, operations, and athletics gives him a differentiated lens — he thinks
-      like someone who has lived the operator side, not just analyzed it. When fully locked into the MAP system, Dylan
-      shows upside as a creative, resilient analyst with a marketer’s eye and an operator’s intuition.
+      His work across investing, entrepreneurship, operations, and athletics gives him a differentiated lens — he thinks like someone who has lived the operator side, not just analyzed it. When fully locked into the MAP system, Dylan shows upside as a creative, resilient analyst with a marketer’s eye and an operator’s intuition.
     </p>
   </section>
 
-  <!-- STRENGTHS -->
+
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Chip-on-your-shoulder mindset:</strong> Uses late start in IB recruiting and resource gaps in polo as fuel to outwork peers.</li>
-      <li><strong>Strong academic foundation:</strong> 3.8 GPA with rigorous science and quantitative coursework.</li>
-      <li><strong>Real investing exposure:</strong> Analyst experience sourcing deals, analyzing niche markets, and evaluating B2B services.</li>
-      <li><strong>Entrepreneurial execution:</strong> Built e-commerce + content operations generating $65K+ in GMV and tens of thousands of followers.</li>
-      <li><strong>High-performance athletics:</strong> National-level polo and Cornell D-I polo experience requiring discipline and composure under pressure.</li>
-      <li><strong>Leadership experience:</strong> RA for 450+ students — real crisis management, conflict resolution, and community building.</li>
+      <li>Chip-on-your-shoulder mindset — uses late start in IB recruiting and resource gaps in polo as fuel to outwork peers.</li>
+      <li>Strong academic foundation — 3.8 GPA with rigorous science + quantitative coursework.</li>
+      <li>Real investing exposure — sourcing deals, niche market analysis, B2B evaluation.</li>
+      <li>Entrepreneurial execution — built e-commerce/content business generating $65K+ GMV & major audience growth.</li>
+      <li>High-performance athletics — national-level polo experience with discipline under pressure.</li>
+      <li>Leadership — RA for 450+ students with real crisis management & community-building responsibility.</li>
     </ul>
   </section>
 
-  <!-- AREAS FOR DEVELOPMENT -->
+
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Strengthen deadline reliability and multi-week execution to align performance with his underlying upside.</li>
-      <li>Continue building IB-specific technical reps in valuation, accounting, and modeling.</li>
-      <li>Refine interview storytelling using structured, banker-friendly narratives drawn from rich entrepreneurial + athletic experiences.</li>
+      <li>Increase deadline reliability & multi-week execution consistency.</li>
+      <li>Continue building technical reps across valuation, accounting, and modeling.</li>
+      <li>Sharpen interview storytelling using structured banker-style narratives.</li>
     </ul>
   </section>
 
-  <!-- PROJECTION -->
+
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Dylan projects as a <strong>Round 3–4 MAP prospect</strong> with clear upside characteristics — grit, resourcefulness,
-      and a differentiated background. With continued reliability and technical reps, he could grow into a uniquely
-      valuable analyst who blends operator intuition with entrepreneurial creativity and a resilient, competitor mindset.
+      Dylan projects as a Round 3–4 MAP prospect with clear upside characteristics — grit, resourcefulness, and a differentiated background. With continued reliability and technical reps, he could grow into a uniquely valuable analyst who blends operator intuition with entrepreneurial creativity and a resilient, competitor mindset.
     </p>
   </section>
 
 </div>
-
+</body>
+</html>
