--- a/cosmo-fusco.html
+++ b/cosmo-fusco.html
@@ -85,7 +85,7 @@
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.85</span></li>
         <li><span>Sport</span><span class="meta-value">Football</span></li>
-        <li><span>Hometown</span><span class="meta-value">Trussville, AL</span></li>
+        <li><span>Hometown</span><span class="meta-value">Boonton, NJ</span></li>
       </ul>
     </div>
 
