--- a/piper-blackband.html
+++ b/piper-blackband.html
@@ -100,7 +100,7 @@
       <li><span>Year</span><span class="meta-value">2028</span></li>
       <li><span>GPA</span><span class="meta-value">3.5</span></li>
       <li><span>Sport</span><span class="meta-value">Sailing</span></li>
-      <li><span>Hometown</span><span class="meta-value">San Diego, CA</span></li>
+      <li><span>Hometown</span><span class="meta-value">Newport Beach, CA</span></li>
     </ul>
   </div>
 
