--- a/michael-tzitzikakis.html
+++ b/michael-tzitzikakis.html
@@ -1,284 +1,156 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Michael Tzitzikakis — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
+  .prospect-page {max-width:960px;margin:0 auto 3rem;padding:1.5rem;color:#1a1a1a;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin-bottom:.25rem;text-transform:uppercase;}
+  .prospect-tagline {font-size:1rem;font-weight:600;margin-bottom:.15rem;}
+  .prospect-subtitle {font-size:.9rem;opacity:.9;margin:0;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  .prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;
+    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label {font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
+  .grade-tier {font-size:.9rem;font-weight:600;}
 
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
+  /* Recommendation Pill */
+  .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box {width:12px;height:12px;border-radius:3px;}
+  .pill-red {background:#ef4444;}
 
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
+  /* META */
+  .prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column {flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title {font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list {list-style:none;margin:0;padding:0;}
+  .meta-list li {display:flex;justify-content:space-between;padding:.28rem 0;
+    border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value {text-align:right;margin-left:1rem;}
 
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
+  /* CONTENT */
+  .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body {font-size:.9rem;line-height:1.52;}
+  .section-list li {font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- ============================= -->
-  <!-- HERO -->
-  <!-- ============================= -->
+  <!-- ================= HERO ================= -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">MICHAEL TZITZIKAKIS</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Hustler Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Columbia University · Rowing 🚣 · Class of 2028</p>
+    <div>
+      <h1 class="prospect-name">Michael Tzitzikakis</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">Columbia University · Rowing · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.1</div>
-      <div class="grade-tier">Round 2–3 Candidate</div>
-      <div class="grade-note">High-upside MAP alum · requires sponsorship (UK)</div>
+      <div class="grade-score">83</div>
+      <div class="grade-tier">Round 3–4</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <span>Watchlist Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- META -->
-  <!-- ============================= -->
+
+  <!-- ================= META ================= -->
   <section class="prospect-meta">
+
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">Columbia University</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Mechanical Engineering</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">Computer Science</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Rowing</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">London, England</span></li>
+        <li><span>School</span><span class="meta-value">Columbia University</span></li>
+        <li><span>Major</span><span class="meta-value">Financial Engineering</span></li>
+        <li><span>Minor</span><span class="meta-value">Computer Science</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.5</span></li>
+        <li><span>Sport</span><span class="meta-value">Rowing</span></li>
+        <li><span>Hometown</span><span class="meta-value">London, England</span></li>
       </ul>
     </div>
 
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">28 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.5</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">6. Hustler</span></li>
-        <li><span class="meta-key">Performance</span>
-          <span class="meta-value">
-            Returning MAP alum · workload spans startup, VC, real estate · ranking undersells quality
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">24 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">85.1%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">85.0%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">85.0%</span></li>
+        <li><span>Personality</span><span class="meta-value">Hustler (Driven, Creative Problem-Solver)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Democratic Leader (Collaborative, Shared Decision-Making)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Supportive (Steady, Reliable)</span></li>
       </ul>
     </div>
+
   </section>
 
-  <!-- ============================= -->
-  <!-- OVERVIEW -->
-  <!-- ============================= -->
+
+
+  <!-- ================= CONTENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Michael is a high-upside Hustler archetype with a rare blend of engineering rigor, early finance exposure,
-      and leadership across multiple high-intensity environments. A Mechanical Engineering major with a
-      Computer Science minor at Columbia Engineering, he pairs strong technical foundations with real reps in
-      venture capital, AI startups, and real estate capital advisory — all while competing as a Division I rower.
+      Michael is a high-upside Hustler archetype with a rare blend of engineering rigor, early finance exposure, and leadership across multiple high-intensity environments. A Mechanical Engineering major with a Computer Science minor at Columbia Engineering, he pairs strong technical foundations with real reps in venture capital, AI startups, and real estate capital advisory — all while competing as a Division I rower.
       <br><br>
-      He first came through MAP as a freshman in finance fellowships with Morgan Stanley and Wells Fargo, then
-      proactively returned for Diamond League as a sophomore to get more reps and sharpen his front-office
-      toolkit. That decision, plus his continuous planning and goal orientation, speaks directly to his Hustler DNA:
-      he’s always thinking about the next step and doing the work to get there.
+      He first came through MAP as a freshman in finance fellowships with Morgan Stanley and Wells Fargo, then proactively returned for Diamond League as a sophomore to get more reps and sharpen his front-office toolkit. That decision, plus his continuous planning and goal orientation, speaks directly to his Hustler DNA: he’s always thinking about the next step and doing the work to get there.
       <br><br>
-      The main structural obstacle for firms is not ability — it is logistics: as a London-born candidate, Michael
-      will require sponsorship. For banks willing to navigate that, he offers a powerful combination of technical
-      skill, global perspective, and real deal-adjacent experience that significantly outperforms his mid-pack
-      ranking.
+      The main structural obstacle for firms is not ability — it is logistics: as a London-born candidate, Michael will require sponsorship. For banks willing to navigate that, he offers a powerful combination of technical skill, global perspective, and real deal-adjacent experience that significantly outperforms his mid-pack ranking.
     </p>
   </section>
 
-  <!-- ============================= -->
-  <!-- STRENGTHS -->
-  <!-- ============================= -->
+
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Hustler drive:</strong> Always planning ahead, sustaining effort toward long-term goals across academics, athletics, and career.</li>
-      <li><strong>Technical horsepower:</strong> Mechanical Engineering + CS at Columbia; decorated maths/physics Olympiad record.</li>
-      <li><strong>Diverse finance exposure:</strong> Experience across AI healthcare startup, VC, and real estate capital advisory.</li>
-      <li><strong>MAP pedigree:</strong> Prior fellowships with Morgan Stanley and Wells Fargo; returning alum for Diamond League reps.</li>
-      <li><strong>Analytical and writing chops:</strong> LP report work, public comps benchmarking, and authored piece on Agentic AI.</li>
-      <li><strong>Leadership and responsibility:</strong> Boat Club Captain at Westminster; handled brand deals, events, and admin.</li>
-      <li><strong>Global perspective:</strong> London to NYC pathway, international competition experience, and cross-border work.</li>
+      <li>Hustler drive — goal-oriented, proactive, future-focused.</li>
+      <li>Technical horsepower — Mechanical Engineering + CS foundation.</li>
+      <li>Experience across VC, AI startups, and real estate capital advisory.</li>
+      <li>MAP pedigree — Morgan Stanley + Wells Fargo fellowships.</li>
+      <li>Analytical/writing strength — LP reports, comps benchmarking, agentic AI research.</li>
+      <li>Leadership — Boat Club Captain handling brand deals + events.</li>
+      <li>Global perspective — London to NYC track & international experience.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
+
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Requires work sponsorship, which will narrow the set of firms able to fully engage.</li>
-      <li>GPA is solid but can trend higher to match his technical and experiential ceiling.</li>
-      <li>Needs to keep tightening the narrative that connects engineering, VC, startup, and real estate into a focused IB story.</li>
-      <li>Can further refine behavioral answers to simplify complex technical experiences for non-technical interviewers.</li>
+      <li>Sponsorship required — reduces number of eligible partner firms.</li>
+      <li>GPA improvement would align with technical ceiling.</li>
+      <li>Sharpen storytelling to connect engineering → finance trajectory.</li>
+      <li>Simplify complex experiences for non-technical interviewers.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- PROJECTION -->
-  <!-- ============================= -->
+
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A Round 2–3 MAP prospect with the game to play at a Round 1 level for the right sponsor. Michael offers
-      a rare mix of technical skill, global experience, and demonstrated commitment to finance. For firms able to
-      sponsor international candidates, he represents a high-upside, multi-cycle value play — the type of analyst
-      who can grow into a versatile front-office contributor across banking, growth equity, or principal investing.
+      A Round 2–3 MAP prospect with Round 1 potential for the right sponsor. Michael’s technical rigor, global background, and demonstrated commitment to finance make him a unique value play. For firms able to sponsor international candidates, he has the pathway to evolve into a versatile front-office analyst — one who can contribute in banking, growth equity, or principal investing.
     </p>
   </section>
 
 </div>
+</body>
+</html>
+
